feat: legal router for terms and conditions related docs
