# src/routes/v1/index.ts
@@ -7,6 +7,7 @@ import searchRouter from './search-router';
 import ordersRouter from './orders-router';
 import adminRouter from './admin-router';
 import checkoutRouter from './checkout-router';
+import legalRouter from './legal-router';
 
 const v1Router: Router = Router();
 
@@ -16,6 +17,7 @@ v1Router.use('/tags', tagsRouter);
 v1Router.use('/products', productsRouter);
 v1Router.use('/search', searchRouter);
 v1Router.use('/orders', ordersRouter);
+v1Router.use('/legal', legalRouter);
 v1Router.use('/admin', adminRouter);
 v1Router.use('/checkout', checkoutRouter);
 
